--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
                 <div class="links">
                    
-                    <a href="Mt-intern.html">Meet The Interns</a>
+                    <a href="#">Meet The Interns</a>
                     <a href="index.html">Support The Growth</a>
                     <a href="intern.html">Become An Intern</a>
                     <a href="">Learn To Code</a>
