--- a/intern.html
+++ b/intern.html
@@ -29,7 +29,7 @@
                 
                 <div class="links df jc-sb" id="hide-link">
                     <div class="alinks df jc-sb">
-                        <a href="Mt-intern.html">Meet The Interns</a>
+                        <a href="#">Meet The Interns</a>
                         <a href="index.html">Support The Growth</a>
                         <a href="intern.html">Become An Intern</a>
                         <a href="">Learn To Code</a>
